2024-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-4

2024-03-20  Enrico Schumann  <es@enricoschumann.net>

        * data/tznames.txt: update timezone names

2023-11-02  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-3

        * R/functions.R (hour,minute,second): fix functions

2023-09-20  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-2

        * vignettes/datetimeutils_examples.Rnw: use
        "inconsolata" instead of "DejaVuSansMono"

2023-04-03  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-1

        * inst/tinytest/test.R (tfun): compare results from
        datetime conversion via text-representation (i.e.
        YYYYMMDD ...)

2023-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.6-0

2023-03-03  Enrico Schumann  <es@enricoschumann.net>

        * data/tznames.txt: update timezone names

2023-01-09  Enrico Schumann  <es@enricoschumann.net>

        * Scripts/tznames.R: remove duplicates

2022-07-01  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): improve pattern
        for YYYYMMDD

2022-05-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (prev_bday, previous_businessday):
        argument 'holidays' is now supported
        (next_bday, next_businessday):
        argument 'holidays' is now supported
        (is_businessday):
        argument 'holidays' is now supported

2021-07-25  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (date1904): add function

2021-07-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (convert_date): add type
        "excel1904", for Excel files with origin 1904-01-01

2021-05-27  Enrico Schumann  <es@enricoschumann.net>

        * NAMESPACE: export 'hour', 'minute' and 'second'

2021-05-04  Enrico Schumann  <es@enricoschumann.net>
