@@ -10,3 +10,35 @@ month.abb.de.din1355.1 <- c("Jan", "Feb", "Mrz",
                             "Apr", "Mai", "Jun",
                             "Jul", "Aug", "Sep",
                             "Okt", "Nov", "Dez")
+
+Easter <- structure(
+    c(`1970` = 87, `1971` = 465,
+      `1972` = 822, `1973` = 1207,
+      `1974` = 1564, `1975` = 1914,
+      `1976` = 2299, `1977` = 2656,
+      `1978` = 3006, `1979` = 3391,
+      `1980` = 3748, `1981` = 4126,
+      `1982` = 4483, `1983` = 4840,
+      `1984` = 5225, `1985` = 5575,
+      `1986` = 5932, `1987` = 6317,
+      `1988` = 6667, `1989` = 7024,
+      `1990` = 7409, `1991` = 7759,
+      `1992` = 8144, `1993` = 8501,
+      `1994` = 8858, `1995` = 9236,
+      `1996` = 9593, `1997` = 9950,
+      `1998` = 10328, `1999` = 10685,
+      `2000` = 11070, `2001` = 11427,
+      `2002` = 11777, `2003` = 12162,
+      `2004` = 12519, `2005` = 12869,
+      `2006` = 13254, `2007` = 13611,
+      `2008` = 13961, `2009` = 14346,
+      `2010` = 14703, `2011` = 15088,
+      `2012` = 15438, `2013` = 15795,
+      `2014` = 16180, `2015` = 16530,
+      `2016` = 16887, `2017` = 17272,
+      `2018` = 17622, `2019` = 18007,
+      `2020` = 18364, `2021` = 18721,
+      `2022` = 19099, `2023` = 19456,
+      `2024` = 19813, `2025` = 20198,
+      `2026` = 20548, `2027` = 20905),
+    class = "Date")
